--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,3 +1,5 @@
+imports:
+    - { resource: tagss.yml }
 backend:
   name: github
   repo: thakkarhiral/staticpress.io
@@ -6,26 +8,6 @@ backend:
 publish_mode: editorial_workflow
 media_folder: source/images
 collections:
-  - name: "posts"
-    label: "Posts"
-    label_singular: "Post"
-    folder: "source/_posts"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - {label: "Title", name: "title", widget: "string", default: "Title"}
-      - {label: "Author Name", name: "authorname", widget: "string", required: false}
-      - {label: "Date", name: "date", widget: "date"}
-      - {label: "SEOTitle", name: "seotitle", widget: "string", default: "SEO Title"}
-      - {label: "SEO Keywords", name: "seokeywords", widget: "string", default: SEO Keywords}
-      - {label: "SEO Description", name: "seodescription", widget: "string", default: SEO Description}
-      - {label: "Tags", name: "tags", widget: "list", required: false}
-      - {label: "Categories", name: "categories", widget: "list", required: false}
-      - {label: "Image Filename", name: "image", widget: "image", required: true}
-      - {label: "Author Image", name: "authorimage", widget: "image", required: false}
-      - {label: "Author Image", name: "authorimage", widget: "string", required: false}
-      - {label: "Comments", name: "comments", widget: "boolean", default: true}
-      - {label: "Body", name: "body", widget: "markdown"}
   - name: "categories"
     label: "Categories"
     label_singular: "Category"
@@ -34,7 +16,6 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string", default: "Title"}
-      - {label: "Image", name: "image", widget: "image"}
   - name: "tags"
     label: "Tags"
     label_singular: "Tag"
@@ -43,3 +24,31 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string", default: "Title"}
+  - name: "posts"
+    label: "Posts"
+    label_singular: "Post"
+    folder: "source/_posts"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string", default: "Title"}
+      - {label: "Author Name", name: "authorname", widget: "string"}
+      - {label: "Date", name: "date", widget: "date"}
+      - {label: "SEOTitle", name: "seotitle", widget: "string", default: "SEO Title"}
+      - {label: "SEO Keywords", name: "seokeywords", widget: "string", default: SEO Keywords}
+      - {label: "SEO Description", name: "seodescription", widget: "string", default: SEO Description}
+      - {label: "Tags", name: "tags", widget: "relation", collection: 'tags', searchFields: ["title"], displayFields: ["title"], valueField: "title", multiple: true, default: ""}
+      - {label: "Categories", name: "categories", widget: "relation", collection: 'categories', searchFields: ["title"], displayFields: ["title"], valueField: "title", default: ""}
+      - {label: "Image Filename", name: "image", widget: "image", required: true}
+      - {label: "Comments", name: "comments", widget: "boolean", default: true}
+      - {label: "Featured", name: "featured", widget: "boolean", default: false}
+      - {label: "Layout", name: "layout", widget: "hidden", default: true}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "settings"
+    label: "Settings"
+    label_singular: "Setting"
+    folder: "source/_settings"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "About author", name: "aboutauthor", widget: "string", default: "About author"}
