--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -41,8 +41,8 @@ collections:
       - {label: "Categories", name: "categories", widget: "relation", collection: 'categories', searchFields: ["title"], displayFields: ["title"], valueField: "title", default: ""}
       - {label: "Image Filename", name: "image", widget: "image", required: true}
       - {label: "Comments", name: "comments", widget: "boolean", default: true}
-      - {label: "Featured", name: "featured", widget: "boolean", default: true}
-      - {label: "PostExist", name: "postexist", widget: "hidden", default: false}
+      - {label: "Featured", name: "featured", widget: "boolean", default: false}
+      - {label: "IsPosts", name: "isPosts", widget: "hidden", default: true}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "settings"
     label: "Settings"
