SEO function added adn collection added in config

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -39,8 +39,8 @@ collections:
       - {label: "Categories", name: "categories", widget: "relation", collection: 'categories', searchFields: ["title"], displayFields: ["title"], valueField: "title", default: ""}
       - {label: "Image Filename", name: "image", widget: "image", required: true}
       - {label: "Comments", name: "comments", widget: "boolean", default: true}
-      - {label: "Featured", name: "featured", widget: "boolean", default: false}
       - {label: "IsPosts", name: "isPosts", widget: "hidden", default: true}
+      - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "settings"
     label: "Settings"
@@ -49,7 +49,12 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
+      - {label: "Title", name: "title", widget: "string", default: "Setting"}
+      - {label: "SEOTitle", name: "seotitle", widget: "string", default: "SEO Title"}
+      - {label: "SEO Keywords", name: "seokeywords", widget: "string", default: SEO Keywords}
+      - {label: "SEO Description", name: "seodescription", widget: "string", default: SEO Description}
       - {label: "About author", name: "aboutauthor", widget: "markdown", default: "About author"}
+      - {label: "Post page title", name: "postpagetitle", widget: "string", default: "Post page title"}
       - {label: "Logo", name: "logo", markdown: "image"}
       - {label: "FbLink", name: "fblink", widget: "string"}
       - {label: "TwitterLink:", name: "twitterlink", widget: "string"}
