Optional changes added in collection

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -32,9 +32,9 @@ collections:
       - {label: "Title", name: "title", widget: "string", default: "Title"}
       - {label: "Author Name", name: "authorname", widget: "string"}
       - {label: "Date", name: "date", widget: "date"}
-      - {label: "SEOTitle", name: "seotitle", widget: "string", default: "SEO Title"}
-      - {label: "SEO Keywords", name: "seokeywords", widget: "string", default: SEO Keywords}
-      - {label: "SEO Description", name: "seodescription", widget: "string", default: SEO Description}
+      - {label: "SEOTitle", name: "seotitle", widget: "string", default: "SEO Title", required: false}
+      - {label: "SEO Keywords", name: "seokeywords", widget: "string", default: SEO Keywords, required: false}
+      - {label: "SEO Description", name: "seodescription", widget: "string", default: SEO Description, required: false}
       - {label: "Tags", name: "tags", widget: "relation", collection: 'tags', searchFields: ["title"], displayFields: ["title"], valueField: "title", multiple: true, default: ""}
       - {label: "Categories", name: "categories", widget: "relation", collection: 'categories', searchFields: ["title"], displayFields: ["title"], valueField: "title", default: ""}
       - {label: "Image Filename", name: "image", widget: "image", required: true}
